Attempted fix to me.jpg alignment

--- a/css/main.css
+++ b/css/main.css
@@ -17,4 +17,5 @@ img {
   border-width: 4px;
   border-radius: 5px;
   margin: auto;
+  text-align: center;
 }
